--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@huggingface/inference": "^2.6.4",
+    "@types/express-fileupload": "^1.5.1",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -12,12 +13,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.1",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "multer": "^2.0.1",
     "node-fetch": "^3.3.2",
     "openai": "^4.26.0",
     "pg": "^8.11.3",
+    "tesseract.js": "^6.0.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
